# trash-classification-project

./: .gitignore  README.md  hello.py  phase2.md  pyproject.toml
notebooks/: distilbert_text_model.ipynb  image_model_experiment_mobilenetv3.ipynb  mobilenet_v3_classification_report.txt  multimodal_fusion.ipynb
notebooks/phase1/: multimodal_fusion.ipynb
notebooks/phase2/: 01_db_population.ipynb  02.1_evaluation.ipynb  02_evaluation.ipynb  03_imbalance_experiment.ipynb  04_continual_learning.ipynb  05_results_summary.ipynb
other-notebooks/: tutorial_traditional_ML.ipynb
results/: mobilenet_v3_and_distilbert_fusion_results.txt  mobilenet_v3_classification_report.txt  multimodal_fusion_results.json
src/phase2/: __init__.py  config.py  data_utils.py  db_client.py  embedders.py  evaluation.py  gpu_utils.py  imbalance.py  scoring.py  traditional.py  visualization.py
src/trash_classification_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
