[project]
name = "trash-classification-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.4"
dependencies = [
    "chromadb>=0.6.0",
    "ipykernel>=7.2.0",
    "markupsafe==3.0.3",
    "matplotlib>=3.10.8",
    "open-clip-torch>=2.24.0",
    "pandas>=2.2.0",
    "pillow>=10.0.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=3.0.0",
    "torch>=2.10.0",
    "tqdm>=4.66.0",
    "torchvision>=0.25.0",
    "transformers>=4.40.0",
]

[tool.uv]
package = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }
